--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, BC, Canada</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Hong Kong, Canada, British</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Hong Kong, Canada,
+                      British</span>
                   </li>
                 </ul>
               </div>
@@ -558,8 +559,14 @@
                 </li>
                 <li>Conducted unit testing and integration testing to ensure software quality and reliability.</li>
               </ul>
-              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->Google Cloud Platform (GCP) · Mqtt ·
-                MongoDB · Node.js · Amazon Web Services (AWS) · Python · Flutter · C++<!----></span>
+              <span aria-hidden="true"><strong>
+                  <!---->Skills：
+                  <!---->
+                </strong>
+                <!---->Google Cloud Platform (GCP) · Mqtt ·
+                MongoDB · Node.js · Amazon Web Services (AWS) · Python · Flutter · C++
+                <!---->
+              </span>
             </div>
             <div class="resume-item">
               <h4>Assistant Engineer</h4>
@@ -580,10 +587,16 @@
                     target="_blank">Demo Video
                   </a></li>
               </ul>
-              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot
+              <span aria-hidden="true"><strong>
+                  <!---->Skills：
+                  <!---->
+                </strong>
+                <!---->OpenCV · TensorFlow · Robot
                 Operating
                 System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
-                C++<!----></span>
+                C++
+                <!---->
+              </span>
             </div>
             <div class="resume-item">
               <h4>Student Helper (Software Engineer)</h4>
@@ -597,8 +610,14 @@
                 <li>Designed a user-friendly web interface with PHP to streamline data input and enhance data retrieval
                   security.</li>
               </ul>
-              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->HTML · CSS · JavaScript
-                PHP · SQL <!----></span>
+              <span aria-hidden="true"><strong>
+                  <!---->Skills：
+                  <!---->
+                </strong>
+                <!---->HTML · CSS · JavaScript
+                PHP · SQL
+                <!---->
+              </span>
             </div>
             <div class="resume-item">
               <h4>Technician</h4>
@@ -737,6 +756,23 @@
         <div class="row mb-4">
           <div class="col-lg-4">
             <div class="card h-100">
+              <img class="card-img-top" src="assets/img/resume_generator.png"
+                style="height: 500px; object-fit: contain;" alt="Resume Generator">
+              <div class="card-body">
+                <h5 class="card-title">Resume Generator</h5>
+                <p class="card-text">
+                  Resume Generator Powered by Google Gemini. No longer required for tailoring the resume for each job
+                  post or any other purpose. Generate resume based on the input information by simply copying the job
+                  ads.
+                </p>
+                <a href="https://resume-generator-1aa52.web.app/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://github.com/jeff214103/resume-generator/" class="btn btn-custom-green"
+                  target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card h-100">
               <img class="card-img-top" src="assets/img/indoor-service-robot.jpg"
                 style="height: 500px; object-fit: contain;" alt="Indoor service robot">
               <div class="card-body">
@@ -747,22 +783,6 @@
                   Smart Cities.
                 </p>
                 <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-custom-green" target="_blank">Demo</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="card h-100">
-              <img class="card-img-top" src="assets/img/directed-graph.png" style="height: 500px; object-fit: contain;"
-                alt="Directed Graph Display">
-              <div class="card-body">
-                <h5 class="card-title">Directed Graph</h5>
-                <p class="card-text">
-                  Interactive Directed Graph Display, built with HTML5, CSS, JS, and d3js. It brings the data to life by
-                  seamlessly mapping actual dimensions to graph in a web
-                  display. Suitable for displaying routes and abstract maps.
-                </p>
-                <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-custom-green"
-                  target="_blank">Gitlab</a>
               </div>
             </div>
           </div>
@@ -792,7 +812,24 @@
         </div>
         <div class="collapse" id="collapseProjectList">
           <div class="row mb-4">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
+              <div class="card h-100">
+                <img class="card-img-top" src="assets/img/directed-graph.png"
+                  style="height: 500px; object-fit: contain;" alt="Directed Graph Display">
+                <div class="card-body">
+                  <h5 class="card-title">Directed Graph</h5>
+                  <p class="card-text">
+                    Interactive Directed Graph Display, built with HTML5, CSS, JS, and d3js. It brings the data to life
+                    by
+                    seamlessly mapping actual dimensions to graph in a web
+                    display. Suitable for displaying routes and abstract maps.
+                  </p>
+                  <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-custom-green"
+                    target="_blank">Gitlab</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/cutsha.png" style="height: 300px; object-fit: contain;"
                   alt="Cutsha">
@@ -809,7 +846,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/vision_test.png" style="height: 300px; object-fit: contain;"
                   alt="Vision Test">
@@ -825,7 +862,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/hearing.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
@@ -842,10 +879,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/robocon2020_robot.png"
                   style="height: 300px; object-fit: contain;" alt="Robocon">
@@ -860,7 +894,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/robocon2019_robot.png"
                   style="height: 300px; object-fit: contain;" alt="Vision Test">
@@ -876,7 +910,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/ROV.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
@@ -891,10 +925,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row mb-4">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/cityhunt.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
@@ -908,7 +939,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/Big Data 5003.png" style="height: 300px; object-fit: contain;"
                   alt="Vision Test">
@@ -923,7 +954,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/CV 5016.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
@@ -938,10 +969,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/Smart Contract.png"
                   style="height: 300px; object-fit: contain;" alt="Vision Test">
@@ -956,7 +984,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/tic-tac-toe.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
@@ -972,7 +1000,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-4">
               <div class="card h-100">
                 <img class="card-img-top" src="assets/img/3D Game Booth.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
@@ -1158,9 +1186,7 @@
                         href="https://www.youtube.com/watch?v=uAKAmgR6NWo&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
                         target="_blank">ABU Robocon 2023 Live</a>
                     </li>
-                    <li><a
-                        href="https://www.youtube.com/watch?v=XZuQFD4nzik"
-                        target="_blank">ABU Robocon 2024 Live</a>
+                    <li><a href="https://www.youtube.com/watch?v=XZuQFD4nzik" target="_blank">ABU Robocon 2024 Live</a>
                     </li>
                   </ul>
                 </li>
