--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
 
       </div>
     </section>
-    <section id="dream" class="dream">
+    <!-- <section id="dream" class="dream">
       <div class="container">
         <div class="section-title">
           <h2>Dream Workplace</h2>
@@ -1485,7 +1485,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
     <section id="contact" class="contact section-bg">
       <div class="container">
         <div class="section-title">
