--- a/index.html
+++ b/index.html
@@ -540,7 +540,23 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Working Experience</h3>
+            <h3 class="resume-title">Working Experience</h3><div class="resume-item">
+              <h4>Prompt Engineer</h4>
+              <h5>Jan 2025 - Present</h5>
+              <p><em><a href="https://zerionsoftware.com/" target="_blank">ZERION</a>, US (Remote)</em></p>
+              <ul>
+                <li>Developed and refined prompts for various LLMs, significantly improving the quality, accuracy, and efficiency of text outputs by achieving over 90% consistency.  Focus was on code generation.</li>
+                <li>Implemented advanced prompt engineering techniques, including one-shot prompting, few-shot learning, chain-of-thought prompting, and prompt decomposition, to enhance LLM performance.</li>
+                <li>Reduced the need for post-processing and manual intervention, increasing the efficiency and scalability  for the zero-knowledge user using LLM-based systems.</li>
+              </ul>
+              <span aria-hidden="true"><strong>
+                  <!---->Skills：
+                  <!---->
+                </strong>
+                <!---->Prompt Engineering · LLM · Code Generation
+                <!---->
+              </span>
+            </div>
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>Jul 2022 - Aug 2024 -> Present</h5>
@@ -599,7 +615,7 @@
               </span>
             </div>
             <div class="resume-item">
-              <h4>Student Helper (Software Engineer)</h4>
+              <h4>Software Engineer (Student Helper)</h4>
               <h5>Dec 2015 - May 2017</h5>
               <p><em><a href="https://hseo.hkust.edu.hk/" target="_blank">The Hong Kong University of Science and
                     Technology (HSEO)</a>,
