Update personal webpage

--- a/index.html
+++ b/index.html
@@ -772,6 +772,21 @@
         <div class="row mb-4">
           <div class="col-lg-4">
             <div class="card h-100">
+              <img class="card-img-top" src="assets/img/expense tracker.PNG"
+                style="height: 500px; object-fit: contain;" alt="Resume Generator">
+              <div class="card-body">
+                <h5 class="card-title">Expense Tracker</h5>
+                <p class="card-text">
+                 Expense Tracker for personal finance. Using Flutter and Google Cloud API.
+                </p>
+                <a href="https://personal-finance-tracker-40740.web.app/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://github.com/jeff214103/expense-tracker" class="btn btn-custom-green"
+                  target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card h-100">
               <img class="card-img-top" src="assets/img/resume_generator.png"
                 style="height: 500px; object-fit: contain;" alt="Resume Generator">
               <div class="card-body">
@@ -802,23 +817,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="card h-100">
-              <img class="card-img-top" src="assets/img/urology_app.png" style="height: 500px; object-fit: contain;"
-                alt="Urology App">
-              <div class="card-body">
-                <h5 class="card-title">Health Care App (Urology)</h5>
-                <p class="card-text">
-                  Built with Flutter and designed in collaboration
-                  with Urology Doctors in HK. This app empowers patients assisting doctors in making accurate diagnoses
-                  with decentralized, and
-                  user-friendly interface.
-                </p>
-                <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-custom-green"
-                  target="_blank">Gitlab</a>
-              </div>
-            </div>
-          </div>
+          
         </div>
         <div class="d-flex justify-content-center mb-4">
           <button class="btn btn-custom-green" type="button" data-bs-toggle="collapse"
@@ -891,6 +890,23 @@
                     professional routine checks.
                   </p>
                   <a href="https://gitlab.com/HKCLR-robot/hearing-test-app-package" class="btn btn-custom-green"
+                    target="_blank">Gitlab</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mt-4">
+              <div class="card h-100">
+                <img class="card-img-top" src="assets/img/urology_app.png" style="height: 500px; object-fit: contain;"
+                  alt="Urology App">
+                <div class="card-body">
+                  <h5 class="card-title">Health Care App (Urology)</h5>
+                  <p class="card-text">
+                    Built with Flutter and designed in collaboration
+                    with Urology Doctors in HK. This app empowers patients assisting doctors in making accurate diagnoses
+                    with decentralized, and
+                    user-friendly interface.
+                  </p>
+                  <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-custom-green"
                     target="_blank">Gitlab</a>
                 </div>
               </div>
