update styles and function optimization by AI

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Image Performance Optimization -->
+  <link rel="preload" href="assets/img/profile-img.jpg" as="image">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <!-- =======================================================
   * Template Name: iPortfolio - v3.7.0
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
@@ -47,7 +52,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle lazy-load" loading="lazy">
         <h1 class="text-light"><a href="index.html">Lam Chun Ting Jeff</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter" target="_blank"></i></a>
@@ -103,7 +108,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/profile-img.jpg" class="img-fluid lazy-load" alt="" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -772,8 +777,7 @@
         <div class="row mb-4">
           <div class="col-lg-4">
             <div class="card h-100">
-              <img class="card-img-top" src="assets/img/expense tracker.PNG"
-                style="height: 500px; object-fit: contain;" alt="Resume Generator">
+              <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/expense tracker.PNG" alt="Resume Generator" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Expense Tracker</h5>
                 <p class="card-text">
@@ -787,8 +791,7 @@
           </div>
           <div class="col-lg-4">
             <div class="card h-100">
-              <img class="card-img-top" src="assets/img/resume_generator.png"
-                style="height: 500px; object-fit: contain;" alt="Resume Generator">
+              <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/resume_generator.png" alt="Resume Generator" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Resume Generator</h5>
                 <p class="card-text">
@@ -804,8 +807,7 @@
           </div>
           <div class="col-lg-4">
             <div class="card h-100">
-              <img class="card-img-top" src="assets/img/indoor-service-robot.jpg"
-                style="height: 500px; object-fit: contain;" alt="Indoor service robot">
+              <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/indoor-service-robot.jpg" alt="Indoor service robot" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Indoor Service Robot</h5>
                 <p class="card-text">
@@ -829,8 +831,7 @@
           <div class="row mb-4">
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/directed-graph.png"
-                  style="height: 500px; object-fit: contain;" alt="Directed Graph Display">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/directed-graph.png" alt="Directed Graph Display" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Directed Graph</h5>
                   <p class="card-text">
@@ -846,8 +847,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/cutsha.png" style="height: 300px; object-fit: contain;"
-                  alt="Cutsha">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/cutsha.png" alt="Cutsha" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Cutsha</h5>
                   <p class="card-text">
@@ -863,8 +863,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/vision_test.png" style="height: 300px; object-fit: contain;"
-                  alt="Vision Test">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/vision_test.png" alt="Vision Test" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Health Care App (Vision)</h5>
                   <p class="card-text">
@@ -879,8 +878,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/hearing.png" style="height: 300px; object-fit: contain;"
-                  alt="Urology App">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/hearing.png" alt="Urology App" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Health Care App (Hearing)</h5>
                   <p class="card-text">
@@ -896,8 +894,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/urology_app.png" style="height: 500px; object-fit: contain;"
-                  alt="Urology App">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/urology_app.png" alt="Urology App" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Health Care App (Urology)</h5>
                   <p class="card-text">
@@ -913,8 +910,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/robocon2020_robot.png"
-                  style="height: 300px; object-fit: contain;" alt="Robocon">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/robocon2020_robot.png" alt="Robocon" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Robocon 2020</h5>
                   <p class="card-text">
@@ -928,8 +924,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/robocon2019_robot.png"
-                  style="height: 300px; object-fit: contain;" alt="Vision Test">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/robocon2019_robot.png" alt="Vision Test" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Robocon 2019</h5>
                   <p class="card-text">
@@ -944,8 +939,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/ROV.png" style="height: 300px; object-fit: contain;"
-                  alt="Urology App">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/ROV.png" alt="Urology App" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">ROV (Remote Operated Vehicle)</h5>
                   <p class="card-text">
@@ -959,8 +953,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/cityhunt.png" style="height: 300px; object-fit: contain;"
-                  alt="Robocon">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/cityhunt.png" alt="Robocon" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">CityHunt (2016)</h5>
                   <p class="card-text">
@@ -973,8 +966,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/Big Data 5003.png" style="height: 300px; object-fit: contain;"
-                  alt="Vision Test">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/Big Data 5003.png" alt="Vision Test" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Real-time Twitter Sentiment Analysis (CP)</h5>
                   <p class="card-text">
@@ -988,8 +980,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/CV 5016.png" style="height: 300px; object-fit: contain;"
-                  alt="Urology App">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/CV 5016.png" alt="Urology App" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Facial Keypoints Detection (CP)</h5>
                   <p class="card-text">
@@ -1003,8 +994,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/Smart Contract.png"
-                  style="height: 300px; object-fit: contain;" alt="Vision Test">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/Smart Contract.png" alt="Vision Test" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">Underground Construction Contract (CP)</h5>
                   <p class="card-text">
@@ -1018,8 +1008,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/tic-tac-toe.png" style="height: 300px; object-fit: contain;"
-                  alt="Robocon">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/tic-tac-toe.png" alt="Robocon" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">AI Robocon 2024 Silo Game</h5>
                   <p class="card-text">
@@ -1034,8 +1023,7 @@
             </div>
             <div class="col-lg-4 mt-4">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/3D Game Booth.png" style="height: 300px; object-fit: contain;"
-                  alt="Robocon">
+                <img class="card-img-top" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/3D Game Booth.png" alt="Robocon" loading="lazy">
                 <div class="card-body">
                   <h5 class="card-title">3D Game (Game Booth)</h5>
                   <p class="card-text">
@@ -1062,7 +1050,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6" data-aos="fade-right">
-              <img class="" src="assets/img/Robocon2020.jpg" style="max-height: 350px;">
+              <img class="" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/Robocon2020.jpg" style="max-height: 350px;" loading="lazy">
             </div>
             <div class="col-md-6 content" data-aos="fade-left">
               <h3>ABU Asia-Pacific Robot Contest 2020</h3>
@@ -1113,7 +1101,7 @@
                 <li><a href="http://startupbeat.hkej.com/?p=78396" target="_blank">信報</a></li>
                 <li><a href="https://orientaldaily.on.cc/cnt/news/20190716/00176_022.html" target="_blank">東方日報</a></li>
                 <li><a
-                    href="https://www.pcmarket.com.hk/%E4%BA%9E%E5%A4%AA%E5%BB%A3%E6%92%AD%E8%81%AF%E7%9B%9F%E6%A9%9F%E6%A2%B0%E4%BA%BA%E5%A4%A7%E8%B3%BD-%E6%B8%AF%E9%9A%8A%E7%A0%B4%E9%9B%B6%E5%A5%AA%E5%86%A0/"
+                    href="https://www.pcmarket.com.hk/%E4%BA%9E%E5%A4%AA%E5%BB%A3%E6%92%AD%E8%81%9E%E7%9B%9F%E6%A9%9F%E6%A2%B0%E4%BA%BA%E5%A4%A7%E8%B3%BD-%E6%B8%AF%E9%9A%8A%E7%A0%B4%E9%9B%B6%E5%A5%AA%E5%86%A0/"
                     target="_blank">PCM</a>
                 </li>
               </ul>
@@ -1121,14 +1109,14 @@
               </p>
             </div>
             <div class="col-md-6 " data-aos="fade-left">
-              <img class="" src="assets/img/Robocon2019.jpg" style="max-height: 350px;">
+              <img class="" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/Robocon2019.jpg" style="max-height: 350px;" loading="lazy">
             </div>
           </div>
         </div>
         <div class="container mt-5">
           <div class="row">
             <div class="col-md-6" data-aos="fade-right">
-              <img class="" src="assets/img/outstanding_students_CUHK.jpg" style="max-height: 350px;">
+              <img class="" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/outstanding_students_CUHK.jpg" style="max-height: 350px;" loading="lazy">
             </div>
             <div class="col-md-6 content" data-aos="fade-left">
               <h3>CUHK Outstanding Students Awards 2019</h3>
@@ -1150,7 +1138,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="card h-100" data-aos="zoom-out-up">
-              <img src="assets/img/talent_scholarship.jpg" class="card-img-top" style="max-height: 500px;" />
+              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/talent_scholarship.jpg" class="card-img-top" style="max-height: 500px;" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Talent Scholarship by HKSAR 2019 & 2020</h5>
                 <p class="card-text">
@@ -1162,7 +1150,7 @@
 
           <div class="col-lg-4">
             <div class="card h-100" data-aos="zoom-in-up">
-              <img src="assets/img/mind-drive.jpg" class="card-img-top" style="max-height: 500px;" />
+              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/mind-drive.jpg" class="card-img-top" style="max-height: 500px;" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">Mind Drive Champion 2014</h5>
                 <p class="card-text">
@@ -1175,7 +1163,7 @@
 
           <div class="col-lg-4">
             <div class="card h-100" data-aos="zoom-out-up">
-              <img src="assets/img/ridiy_img.jpg" class="card-img-top" style="max-height: 500px;" />
+              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/ridiy_img.jpg" class="card-img-top" style="max-height: 500px;" loading="lazy">
               <div class="card-body">
                 <h5 class="card-title">RIDIY Champion 2014</h5>
                 <p class="card-text">
@@ -1590,6 +1578,5 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
 
-</body>
-
+  </body>
 </html>
