update personal website with new icon

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/profile-img.jpg" class="img-fluid lazy-load" alt="" loading="lazy">
+            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src="assets/img/itdog.png" class="img-fluid lazy-load" alt="" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
