--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                 <p class="card-text">
                  Expense Tracker for personal finance. Using Flutter and Google Cloud API.
                 </p>
-                <a href="https://personal-finance-tracker-40740.web.app/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://expense.itdogtic.com/" class="btn btn-custom-green" target="_blank">Page</a>
                 <a href="https://github.com/jeff214103/expense-tracker" class="btn btn-custom-green"
                   target="_blank">Github</a>
               </div>
@@ -800,7 +800,7 @@
                   post or any other purpose. Generate resume based on the input information by simply copying the job
                   ads.
                 </p>
-                <a href="https://resume-generator-1aa52.web.app/" class="btn btn-custom-green" target="_blank">Page</a>
+                <a href="https://resume.itdogtic.com" class="btn btn-custom-green" target="_blank">Page</a>
                 <a href="https://github.com/jeff214103/resume-generator/" class="btn btn-custom-green"
                   target="_blank">Github</a>
               </div>
